# io-buffer-rs

./: CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: typos.yml
src/: buffer.rs  lib.rs  test.rs  utils.rs
src/compress/: lz4.rs  mod.rs
