[package]
name = "io-buffer"
version = "1.0.6"
edition = "2024"
authors = ["plan <frostyplanet@gmail.com>"]
categories = ["development-tools::debugging"]
repository = "https://github.com/NaturalIO/io-buffer-rs"
documentation = "https://docs.rs/io-buffer"
keywords = ["buffer", "io"]
license = "MIT"
description = """
A buffer abstracted for disk and network IO, with static lifetime.
Unify Vec and *libc::c_void into one type, with smallest mem footprint.
"""

[dependencies]
nix = "0"
libc = { version= "0" }
lz4-sys = { version="1.11.1", optional=true }
fastrand = "2.3"
fail = "0"
log = "0"

[dev-dependencies]
md5 = "0"

[features]
default = []
compress = []
lz4 = ["compress", "dep:lz4-sys"]
rand = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
